--- a/Day31/Formik/package.json
+++ b/Day31/Formik/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "formik",
+  "name": "library-management",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,11 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.3.2",
+    "date-fns": "^3.2.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
     "yup": "^1.3.3"
   },
